// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerLangPicker (intern) CloseMenuWhenClickOnLangButton play-test 1`] = `
<div data-test-block="true">
  <div class=" TopBannerLangPicker_container__LVr42">
    <div class>
    </div>
    <button class="TopBannerButton_button__5RUa7  TopBannerLangPicker_menuButton__74qQI"
            lang="en"
            aria-expanded="false"
            type="button"
    >
      <span class="TopBannerLangPicker_iconWrapper__SFn8s">
        <span class="TopBannerLangPicker_flagIcon__LcfDc">
          <svg id="Layer_1"
               xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink"
               x="0px"
               y="0px"
               viewbox="0 0 1000 600"
               xml:space="preserve"
               focusable="false"
               aria-hidden="true"
               class="TopBannerLangPicker_flagIconSvg__rO4YM"
          >
            <style type="text/css">
              .st0{fill:#FFFFFF;}
	.st1{fill:#012169;}
	.st2{fill:#C8102E;}
            </style>
            <rect class="st0"
                  width="1000"
                  height="600"
            >
            </rect>
            <g>
              <polygon class="st1"
                       points="165.8,200 0,200 0,117.1  "
              >
              </polygon>
              <polygon class="st1"
                       points="165.8,400 0,482.9 0,400  "
              >
              </polygon>
              <polygon class="st1"
                       points="600,600 965.8,600 600,417.1  "
              >
              </polygon>
              <polygon class="st1"
                       points="34.2,600 400,600 400,417.1  "
              >
              </polygon>
              <polygon class="st1"
                       points="400,0 34.2,0 400,182.9  "
              >
              </polygon>
              <polygon class="st1"
                       points="1000,400 1000,482.9 834.2,400  "
              >
              </polygon>
              <polygon class="st1"
                       points="965.8,0 600,0 600,182.9  "
              >
              </polygon>
              <polygon class="st1"
                       points="1000,117.1 1000,200 834.2,200  "
              >
              </polygon>
              <polygon class="st2"
                       points="1000,5.3 1000,50 700,200 610.6,200  "
              >
              </polygon>
              <polygon class="st2"
                       points="389.4,200 210.6,200 0,94.7 0,5.3  "
              >
              </polygon>
              <polygon class="st2"
                       points="389.4,400 0,594.7 0,505.3 210.6,400  "
              >
              </polygon>
              <polygon class="st2"
                       points="1000,505.3 1000,594.7 610.6,400 789.4,400  "
              >
              </polygon>
              <polygon class="st2"
                       points="1000,240 1000,360 560,360 560,600 440,600 440,360 0,360 0,240 440,240 440,0 560,0 560,240  "
              >
              </polygon>
            </g>
          </svg>
        </span>
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowMobile__6Gl2n"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 10 5 5 5-5H7Z">
          </path>
        </svg>
      </span>
      English
      <span class="TopBannerLangPicker_srOnly__33VA7">
        Meny
      </span>
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowDesktop__o2TzT"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 10 5 5 5-5H7Z">
        </path>
      </svg>
    </button>
    <div class="TopBannerLangPicker_menuArrow__cXG+p">
    </div>
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPicker (intern) Defaults play-test 1`] = `
<div data-test-block="true">
  <div class=" TopBannerLangPicker_container__LVr42">
    <div class="TopBannerLangPicker_overlay__y50Yx">
    </div>
    <button class="TopBannerButton_button__5RUa7  TopBannerLangPicker_menuButton__74qQI"
            lang="nb"
            aria-expanded="true"
            type="button"
    >
      <span class="TopBannerLangPicker_iconWrapper__SFn8s">
        <span class="TopBannerLangPicker_flagIcon__LcfDc">
          <svg id="uuid-b0272ea8-d483-4731-ab86-7400d47091d0"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 1100 800"
               focusable="false"
               aria-hidden="true"
               class="TopBannerLangPicker_flagIconSvg__rO4YM"
          >
            <polygon points="500 0 450 0 450 350 1100 350 1100 300 500 300 500 0"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="450 450 450 800 500 800 500 500 1100 500 1100 450 450 450"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="350 450 0 450 0 500 300 500 300 800 350 800 350 450"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="350 350 350 0 300 0 300 300 0 300 0 350 350 350"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <rect width="300"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect x="500"
                  width="600"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect y="500"
                  width="300"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect x="500"
                  y="500"
                  width="600"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <polygon points="450 350 450 0 350 0 350 350 0 350 0 450 350 450 350 800 450 800 450 450 1100 450 1100 350 450 350"
                     style="fill: rgb(0, 40, 104);"
            >
            </polygon>
          </svg>
        </span>
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowMobile__6Gl2n"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 15 5-5 5 5H7Z">
          </path>
        </svg>
      </span>
      Bokmål
      <span class="TopBannerLangPicker_srOnly__33VA7">
        Meny
      </span>
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowDesktop__o2TzT"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 15 5-5 5 5H7Z">
        </path>
      </svg>
    </button>
    <div class="TopBannerLangPicker_menuArrow__cXG+p">
    </div>
    <div class="TopBannerLangPicker_menu__GFqIr">
      <ul class="TopBannerLangPicker_list__2dLA8">
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class="TopBannerLangPickerButton_buttonCurrent__y8Vxz TopBannerLangPickerButton_button__pl57- "
                  lang="nb"
                  aria-current="true"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="uuid-b0272ea8-d483-4731-ab86-7400d47091d0"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 1100 800"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <polygon points="500 0 450 0 450 350 1100 350 1100 300 500 300 500 0"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="450 450 450 800 500 800 500 500 1100 500 1100 450 450 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 450 0 450 0 500 300 500 300 800 350 800 350 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 350 350 0 300 0 300 300 0 300 0 350 350 350"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <rect width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect y="500"
                      width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      y="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <polygon points="450 350 450 0 350 0 350 350 0 350 0 450 350 450 350 800 450 800 450 450 1100 450 1100 350 450 350"
                         style="fill: rgb(0, 40, 104);"
                >
                </polygon>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              Bokmål
            </span>
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </button>
        </li>
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class=" TopBannerLangPickerButton_button__pl57- "
                  lang="nn"
                  aria-current="false"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="uuid-b0272ea8-d483-4731-ab86-7400d47091d0"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 1100 800"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <polygon points="500 0 450 0 450 350 1100 350 1100 300 500 300 500 0"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="450 450 450 800 500 800 500 500 1100 500 1100 450 450 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 450 0 450 0 500 300 500 300 800 350 800 350 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 350 350 0 300 0 300 300 0 300 0 350 350 350"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <rect width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect y="500"
                      width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      y="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <polygon points="450 350 450 0 350 0 350 350 0 350 0 450 350 450 350 800 450 800 450 450 1100 450 1100 350 450 350"
                         style="fill: rgb(0, 40, 104);"
                >
                </polygon>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              Nynorsk
            </span>
          </button>
        </li>
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class=" TopBannerLangPickerButton_button__pl57- "
                  lang="en"
                  aria-current="false"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   x="0px"
                   y="0px"
                   viewbox="0 0 1000 600"
                   xml:space="preserve"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <style type="text/css">
                  .st0{fill:#FFFFFF;}
	.st1{fill:#012169;}
	.st2{fill:#C8102E;}
                </style>
                <rect class="st0"
                      width="1000"
                      height="600"
                >
                </rect>
                <g>
                  <polygon class="st1"
                           points="165.8,200 0,200 0,117.1  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="165.8,400 0,482.9 0,400  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="600,600 965.8,600 600,417.1  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="34.2,600 400,600 400,417.1  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="400,0 34.2,0 400,182.9  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="1000,400 1000,482.9 834.2,400  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="965.8,0 600,0 600,182.9  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="1000,117.1 1000,200 834.2,200  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="1000,5.3 1000,50 700,200 610.6,200  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="389.4,200 210.6,200 0,94.7 0,5.3  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="389.4,400 0,594.7 0,505.3 210.6,400  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="1000,505.3 1000,594.7 610.6,400 789.4,400  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="1000,240 1000,360 560,360 560,600 440,600 440,360 0,360 0,240 440,240 440,0 560,0 560,240  "
                  >
                  </polygon>
                </g>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              English
            </span>
          </button>
        </li>
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class=" TopBannerLangPickerButton_button__pl57- "
                  lang="se"
                  aria-current="false"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="uuid-6951fa5c-db87-4944-bb36-a10985e758d2"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 808 600"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <path d="m370,0v116.34c78.64,24.02,136,97.27,136,183.66s-57.36,159.64-136,183.66v116.34h438V0h-438Z"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="m474,300c0-68.53-43.31-127.13-104-149.88v299.76c60.69-22.75,104-81.35,104-149.88Z"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="m370,116.34V0h-56v108c19.47,0,38.28,2.92,56,8.34Z"
                      style="fill: rgb(255, 206, 0);"
                >
                </path>
                <path d="m314,492v108h56v-116.34c-17.72,5.42-36.53,8.34-56,8.34Z"
                      style="fill: rgb(255, 206, 0);"
                >
                </path>
                <path d="m370,449.88V150.12c-17.44-6.54-36.31-10.12-56-10.12v320c19.69,0,38.56-3.58,56-10.12Z"
                      style="fill: rgb(255, 206, 0);"
                >
                </path>
                <path d="m258,449.92c17.43,6.51,36.3,10.08,56,10.08V140c-19.7,0-38.57,3.57-56,10.08v299.83Z"
                      style="fill: rgb(0, 114, 41);"
                >
                </path>
                <path d="m314,108V0h-56v116.31c17.72-5.39,36.52-8.31,56-8.31Z"
                      style="fill: rgb(0, 114, 41);"
                >
                </path>
                <path d="m258,483.69v116.31h56v-108c-19.48,0-38.28-2.91-56-8.31Z"
                      style="fill: rgb(0, 114, 41);"
                >
                </path>
                <path d="m122,300c0-86.56,57.28-159.73,136-183.69V0H0v600h258v-116.31c-78.72-23.97-136-97.14-136-183.69Z"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
                <path d="m154,300c0,68.66,43.26,127.22,104,149.92V150.08c-60.74,22.7-104,81.25-104,149.92Z"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
                <path d="m258,449.92c-60.74-22.7-104-81.25-104-149.92s43.26-127.22,104-149.92c17.43-6.51,36.3-10.08,56-10.08v-32c-19.48,0-38.28,2.91-56,8.31-78.72,23.97-136,97.14-136,183.69s57.28,159.73,136,183.69c17.72,5.39,36.52,8.31,56,8.31v-32c-19.7,0-38.57-3.57-56-10.08Z"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="m314,140c19.69,0,38.56,3.58,56,10.12,60.69,22.75,104,81.35,104,149.88s-43.31,127.13-104,149.88c-17.44,6.54-36.31,10.12-56,10.12v32c19.47,0,38.28-2.92,56-8.34,78.64-24.02,136-97.27,136-183.66s-57.36-159.64-136-183.66c-17.72-5.42-36.53-8.34-56-8.34v32Z"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              Sámegiella
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPicker (intern) WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlid"
       class="dummyClassname TopBannerLangPicker_container__LVr42"
       lang="nb"
       data-testid="123ID"
  >
    <div class>
    </div>
    <button class="TopBannerButton_button__5RUa7  TopBannerLangPicker_menuButton__74qQI"
            lang="nb"
            aria-expanded="false"
            type="button"
    >
      <span class="TopBannerLangPicker_iconWrapper__SFn8s">
        <span class="TopBannerLangPicker_flagIcon__LcfDc">
          <svg id="uuid-b0272ea8-d483-4731-ab86-7400d47091d0"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 1100 800"
               focusable="false"
               aria-hidden="true"
               class="TopBannerLangPicker_flagIconSvg__rO4YM"
          >
            <polygon points="500 0 450 0 450 350 1100 350 1100 300 500 300 500 0"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="450 450 450 800 500 800 500 500 1100 500 1100 450 450 450"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="350 450 0 450 0 500 300 500 300 800 350 800 350 450"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="350 350 350 0 300 0 300 300 0 300 0 350 350 350"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <rect width="300"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect x="500"
                  width="600"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect y="500"
                  width="300"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect x="500"
                  y="500"
                  width="600"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <polygon points="450 350 450 0 350 0 350 350 0 350 0 450 350 450 350 800 450 800 450 450 1100 450 1100 350 450 350"
                     style="fill: rgb(0, 40, 104);"
            >
            </polygon>
          </svg>
        </span>
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowMobile__6Gl2n"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 10 5 5 5-5H7Z">
          </path>
        </svg>
      </span>
      Bokmål
      <span class="TopBannerLangPicker_srOnly__33VA7">
        Meny
      </span>
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowDesktop__o2TzT"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 10 5 5 5-5H7Z">
        </path>
      </svg>
    </button>
    <div class="TopBannerLangPicker_menuArrow__cXG+p">
    </div>
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPicker (intern) WithLocale play-test 1`] = `
<div data-test-block="true">
  <div class=" TopBannerLangPicker_container__LVr42">
    <div class="TopBannerLangPicker_overlay__y50Yx">
    </div>
    <button class="TopBannerButton_button__5RUa7  TopBannerLangPicker_menuButton__74qQI"
            lang="en"
            aria-expanded="true"
            type="button"
    >
      <span class="TopBannerLangPicker_iconWrapper__SFn8s">
        <span class="TopBannerLangPicker_flagIcon__LcfDc">
          <svg id="Layer_1"
               xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink"
               x="0px"
               y="0px"
               viewbox="0 0 1000 600"
               xml:space="preserve"
               focusable="false"
               aria-hidden="true"
               class="TopBannerLangPicker_flagIconSvg__rO4YM"
          >
            <style type="text/css">
              .st0{fill:#FFFFFF;}
	.st1{fill:#012169;}
	.st2{fill:#C8102E;}
            </style>
            <rect class="st0"
                  width="1000"
                  height="600"
            >
            </rect>
            <g>
              <polygon class="st1"
                       points="165.8,200 0,200 0,117.1  "
              >
              </polygon>
              <polygon class="st1"
                       points="165.8,400 0,482.9 0,400  "
              >
              </polygon>
              <polygon class="st1"
                       points="600,600 965.8,600 600,417.1  "
              >
              </polygon>
              <polygon class="st1"
                       points="34.2,600 400,600 400,417.1  "
              >
              </polygon>
              <polygon class="st1"
                       points="400,0 34.2,0 400,182.9  "
              >
              </polygon>
              <polygon class="st1"
                       points="1000,400 1000,482.9 834.2,400  "
              >
              </polygon>
              <polygon class="st1"
                       points="965.8,0 600,0 600,182.9  "
              >
              </polygon>
              <polygon class="st1"
                       points="1000,117.1 1000,200 834.2,200  "
              >
              </polygon>
              <polygon class="st2"
                       points="1000,5.3 1000,50 700,200 610.6,200  "
              >
              </polygon>
              <polygon class="st2"
                       points="389.4,200 210.6,200 0,94.7 0,5.3  "
              >
              </polygon>
              <polygon class="st2"
                       points="389.4,400 0,594.7 0,505.3 210.6,400  "
              >
              </polygon>
              <polygon class="st2"
                       points="1000,505.3 1000,594.7 610.6,400 789.4,400  "
              >
              </polygon>
              <polygon class="st2"
                       points="1000,240 1000,360 560,360 560,600 440,600 440,360 0,360 0,240 440,240 440,0 560,0 560,240  "
              >
              </polygon>
            </g>
          </svg>
        </span>
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowMobile__6Gl2n"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 15 5-5 5 5H7Z">
          </path>
        </svg>
      </span>
      English
      <span class="TopBannerLangPicker_srOnly__33VA7">
        Meny
      </span>
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowDesktop__o2TzT"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 15 5-5 5 5H7Z">
        </path>
      </svg>
    </button>
    <div class="TopBannerLangPicker_menuArrow__cXG+p">
    </div>
    <div class="TopBannerLangPicker_menu__GFqIr">
      <ul class="TopBannerLangPicker_list__2dLA8">
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class=" TopBannerLangPickerButton_button__pl57- "
                  lang="nb"
                  aria-current="false"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="uuid-b0272ea8-d483-4731-ab86-7400d47091d0"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 1100 800"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <polygon points="500 0 450 0 450 350 1100 350 1100 300 500 300 500 0"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="450 450 450 800 500 800 500 500 1100 500 1100 450 450 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 450 0 450 0 500 300 500 300 800 350 800 350 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 350 350 0 300 0 300 300 0 300 0 350 350 350"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <rect width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect y="500"
                      width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      y="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <polygon points="450 350 450 0 350 0 350 350 0 350 0 450 350 450 350 800 450 800 450 450 1100 450 1100 350 450 350"
                         style="fill: rgb(0, 40, 104);"
                >
                </polygon>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              Bokmål
            </span>
          </button>
        </li>
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class=" TopBannerLangPickerButton_button__pl57- "
                  lang="nn"
                  aria-current="false"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="uuid-b0272ea8-d483-4731-ab86-7400d47091d0"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 1100 800"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <polygon points="500 0 450 0 450 350 1100 350 1100 300 500 300 500 0"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="450 450 450 800 500 800 500 500 1100 500 1100 450 450 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 450 0 450 0 500 300 500 300 800 350 800 350 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 350 350 0 300 0 300 300 0 300 0 350 350 350"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <rect width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect y="500"
                      width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      y="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <polygon points="450 350 450 0 350 0 350 350 0 350 0 450 350 450 350 800 450 800 450 450 1100 450 1100 350 450 350"
                         style="fill: rgb(0, 40, 104);"
                >
                </polygon>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              Nynorsk
            </span>
          </button>
        </li>
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class="TopBannerLangPickerButton_buttonCurrent__y8Vxz TopBannerLangPickerButton_button__pl57- "
                  lang="en"
                  aria-current="true"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   x="0px"
                   y="0px"
                   viewbox="0 0 1000 600"
                   xml:space="preserve"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <style type="text/css">
                  .st0{fill:#FFFFFF;}
	.st1{fill:#012169;}
	.st2{fill:#C8102E;}
                </style>
                <rect class="st0"
                      width="1000"
                      height="600"
                >
                </rect>
                <g>
                  <polygon class="st1"
                           points="165.8,200 0,200 0,117.1  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="165.8,400 0,482.9 0,400  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="600,600 965.8,600 600,417.1  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="34.2,600 400,600 400,417.1  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="400,0 34.2,0 400,182.9  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="1000,400 1000,482.9 834.2,400  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="965.8,0 600,0 600,182.9  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="1000,117.1 1000,200 834.2,200  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="1000,5.3 1000,50 700,200 610.6,200  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="389.4,200 210.6,200 0,94.7 0,5.3  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="389.4,400 0,594.7 0,505.3 210.6,400  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="1000,505.3 1000,594.7 610.6,400 789.4,400  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="1000,240 1000,360 560,360 560,600 440,600 440,360 0,360 0,240 440,240 440,0 560,0 560,240  "
                  >
                  </polygon>
                </g>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              English
            </span>
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </button>
        </li>
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class=" TopBannerLangPickerButton_button__pl57- "
                  lang="se"
                  aria-current="false"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="uuid-6951fa5c-db87-4944-bb36-a10985e758d2"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 808 600"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <path d="m370,0v116.34c78.64,24.02,136,97.27,136,183.66s-57.36,159.64-136,183.66v116.34h438V0h-438Z"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="m474,300c0-68.53-43.31-127.13-104-149.88v299.76c60.69-22.75,104-81.35,104-149.88Z"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="m370,116.34V0h-56v108c19.47,0,38.28,2.92,56,8.34Z"
                      style="fill: rgb(255, 206, 0);"
                >
                </path>
                <path d="m314,492v108h56v-116.34c-17.72,5.42-36.53,8.34-56,8.34Z"
                      style="fill: rgb(255, 206, 0);"
                >
                </path>
                <path d="m370,449.88V150.12c-17.44-6.54-36.31-10.12-56-10.12v320c19.69,0,38.56-3.58,56-10.12Z"
                      style="fill: rgb(255, 206, 0);"
                >
                </path>
                <path d="m258,449.92c17.43,6.51,36.3,10.08,56,10.08V140c-19.7,0-38.57,3.57-56,10.08v299.83Z"
                      style="fill: rgb(0, 114, 41);"
                >
                </path>
                <path d="m314,108V0h-56v116.31c17.72-5.39,36.52-8.31,56-8.31Z"
                      style="fill: rgb(0, 114, 41);"
                >
                </path>
                <path d="m258,483.69v116.31h56v-108c-19.48,0-38.28-2.91-56-8.31Z"
                      style="fill: rgb(0, 114, 41);"
                >
                </path>
                <path d="m122,300c0-86.56,57.28-159.73,136-183.69V0H0v600h258v-116.31c-78.72-23.97-136-97.14-136-183.69Z"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
                <path d="m154,300c0,68.66,43.26,127.22,104,149.92V150.08c-60.74,22.7-104,81.25-104,149.92Z"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
                <path d="m258,449.92c-60.74-22.7-104-81.25-104-149.92s43.26-127.22,104-149.92c17.43-6.51,36.3-10.08,56-10.08v-32c-19.48,0-38.28,2.91-56,8.31-78.72,23.97-136,97.14-136,183.69s57.28,159.73,136,183.69c17.72,5.39,36.52,8.31,56,8.31v-32c-19.7,0-38.57-3.57-56-10.08Z"
                      style="fill: rgb(0, 53, 173);"
                >
                </path>
                <path d="m314,140c19.69,0,38.56,3.58,56,10.12,60.69,22.75,104,81.35,104,149.88s-43.31,127.13-104,149.88c-17.44,6.54-36.31,10.12-56,10.12v32c19.47,0,38.28-2.92,56-8.34,78.64-24.02,136-97.27,136-183.66s-57.36-159.64-136-183.66c-17.72-5.42-36.53-8.34-56-8.34v32Z"
                      style="fill: rgb(220, 36, 31);"
                >
                </path>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              Sámegiella
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPicker (intern) WithRef play-test 1`] = `
<div data-test-block="true">
  <div class=" TopBannerLangPicker_container__LVr42"
       id="dummyIdForwardedFromRef"
  >
    <div class>
    </div>
    <button class="TopBannerButton_button__5RUa7  TopBannerLangPicker_menuButton__74qQI"
            lang="nb"
            aria-expanded="false"
            type="button"
    >
      <span class="TopBannerLangPicker_iconWrapper__SFn8s">
        <span class="TopBannerLangPicker_flagIcon__LcfDc">
          <svg id="uuid-b0272ea8-d483-4731-ab86-7400d47091d0"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 1100 800"
               focusable="false"
               aria-hidden="true"
               class="TopBannerLangPicker_flagIconSvg__rO4YM"
          >
            <polygon points="500 0 450 0 450 350 1100 350 1100 300 500 300 500 0"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="450 450 450 800 500 800 500 500 1100 500 1100 450 450 450"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="350 450 0 450 0 500 300 500 300 800 350 800 350 450"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="350 350 350 0 300 0 300 300 0 300 0 350 350 350"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <rect width="300"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect x="500"
                  width="600"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect y="500"
                  width="300"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect x="500"
                  y="500"
                  width="600"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <polygon points="450 350 450 0 350 0 350 350 0 350 0 450 350 450 350 800 450 800 450 450 1100 450 1100 350 450 350"
                     style="fill: rgb(0, 40, 104);"
            >
            </polygon>
          </svg>
        </span>
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowMobile__6Gl2n"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 10 5 5 5-5H7Z">
          </path>
        </svg>
      </span>
      Bokmål
      <span class="TopBannerLangPicker_srOnly__33VA7">
        Meny
      </span>
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowDesktop__o2TzT"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 10 5 5 5-5H7Z">
        </path>
      </svg>
    </button>
    <div class="TopBannerLangPicker_menuArrow__cXG+p">
    </div>
  </div>
</div>
`;

exports[`Tester/TopBanner/TopBannerLangPicker (intern) WithoutSami play-test 1`] = `
<div data-test-block="true">
  <div class=" TopBannerLangPicker_container__LVr42">
    <div class="TopBannerLangPicker_overlay__y50Yx">
    </div>
    <button class="TopBannerButton_button__5RUa7  TopBannerLangPicker_menuButton__74qQI"
            lang="nb"
            aria-expanded="true"
            type="button"
    >
      <span class="TopBannerLangPicker_iconWrapper__SFn8s">
        <span class="TopBannerLangPicker_flagIcon__LcfDc">
          <svg id="uuid-b0272ea8-d483-4731-ab86-7400d47091d0"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 1100 800"
               focusable="false"
               aria-hidden="true"
               class="TopBannerLangPicker_flagIconSvg__rO4YM"
          >
            <polygon points="500 0 450 0 450 350 1100 350 1100 300 500 300 500 0"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="450 450 450 800 500 800 500 500 1100 500 1100 450 450 450"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="350 450 0 450 0 500 300 500 300 800 350 800 350 450"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <polygon points="350 350 350 0 300 0 300 300 0 300 0 350 350 350"
                     style="fill: rgb(255, 255, 255);"
            >
            </polygon>
            <rect width="300"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect x="500"
                  width="600"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect y="500"
                  width="300"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <rect x="500"
                  y="500"
                  width="600"
                  height="300"
                  style="fill: rgb(239, 43, 45);"
            >
            </rect>
            <polygon points="450 350 450 0 350 0 350 350 0 350 0 450 350 450 350 800 450 800 450 450 1100 450 1100 350 450 350"
                     style="fill: rgb(0, 40, 104);"
            >
            </polygon>
          </svg>
        </span>
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowMobile__6Gl2n"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m7 15 5-5 5 5H7Z">
          </path>
        </svg>
      </span>
      Bokmål
      <span class="TopBannerLangPicker_srOnly__33VA7">
        Meny
      </span>
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz TopBannerLangPicker_arrowDesktop__o2TzT"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m7 15 5-5 5 5H7Z">
        </path>
      </svg>
    </button>
    <div class="TopBannerLangPicker_menuArrow__cXG+p">
    </div>
    <div class="TopBannerLangPicker_menu__GFqIr">
      <ul class="TopBannerLangPicker_list__2dLA8">
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class="TopBannerLangPickerButton_buttonCurrent__y8Vxz TopBannerLangPickerButton_button__pl57- "
                  lang="nb"
                  aria-current="true"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="uuid-b0272ea8-d483-4731-ab86-7400d47091d0"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 1100 800"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <polygon points="500 0 450 0 450 350 1100 350 1100 300 500 300 500 0"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="450 450 450 800 500 800 500 500 1100 500 1100 450 450 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 450 0 450 0 500 300 500 300 800 350 800 350 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 350 350 0 300 0 300 300 0 300 0 350 350 350"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <rect width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect y="500"
                      width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      y="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <polygon points="450 350 450 0 350 0 350 350 0 350 0 450 350 450 350 800 450 800 450 450 1100 450 1100 350 450 350"
                         style="fill: rgb(0, 40, 104);"
                >
                </polygon>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              Bokmål
            </span>
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </button>
        </li>
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class=" TopBannerLangPickerButton_button__pl57- "
                  lang="nn"
                  aria-current="false"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="uuid-b0272ea8-d483-4731-ab86-7400d47091d0"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 1100 800"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <polygon points="500 0 450 0 450 350 1100 350 1100 300 500 300 500 0"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="450 450 450 800 500 800 500 500 1100 500 1100 450 450 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 450 0 450 0 500 300 500 300 800 350 800 350 450"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <polygon points="350 350 350 0 300 0 300 300 0 300 0 350 350 350"
                         style="fill: rgb(255, 255, 255);"
                >
                </polygon>
                <rect width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect y="500"
                      width="300"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <rect x="500"
                      y="500"
                      width="600"
                      height="300"
                      style="fill: rgb(239, 43, 45);"
                >
                </rect>
                <polygon points="450 350 450 0 350 0 350 350 0 350 0 450 350 450 350 800 450 800 450 450 1100 450 1100 350 450 350"
                         style="fill: rgb(0, 40, 104);"
                >
                </polygon>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              Nynorsk
            </span>
          </button>
        </li>
        <li class="TopBannerLangPicker_listItem__sGReR">
          <button class=" TopBannerLangPickerButton_button__pl57- "
                  lang="en"
                  aria-current="false"
          >
            <span class="TopBannerLangPickerButton_flagWrapper__liIgj">
              <svg id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   x="0px"
                   y="0px"
                   viewbox="0 0 1000 600"
                   xml:space="preserve"
                   focusable="false"
                   aria-hidden="true"
                   class="TopBannerLangPicker_flagIconSvg__rO4YM"
              >
                <style type="text/css">
                  .st0{fill:#FFFFFF;}
	.st1{fill:#012169;}
	.st2{fill:#C8102E;}
                </style>
                <rect class="st0"
                      width="1000"
                      height="600"
                >
                </rect>
                <g>
                  <polygon class="st1"
                           points="165.8,200 0,200 0,117.1  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="165.8,400 0,482.9 0,400  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="600,600 965.8,600 600,417.1  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="34.2,600 400,600 400,417.1  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="400,0 34.2,0 400,182.9  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="1000,400 1000,482.9 834.2,400  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="965.8,0 600,0 600,182.9  "
                  >
                  </polygon>
                  <polygon class="st1"
                           points="1000,117.1 1000,200 834.2,200  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="1000,5.3 1000,50 700,200 610.6,200  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="389.4,200 210.6,200 0,94.7 0,5.3  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="389.4,400 0,594.7 0,505.3 210.6,400  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="1000,505.3 1000,594.7 610.6,400 789.4,400  "
                  >
                  </polygon>
                  <polygon class="st2"
                           points="1000,240 1000,360 560,360 560,600 440,600 440,360 0,360 0,240 440,240 440,0 560,0 560,240  "
                  >
                  </polygon>
                </g>
              </svg>
            </span>
            <span class="TopBannerLangPickerButton_buttonText__rrVmL">
              English
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
